<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Name Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Name"
            android:focusable="false"
            android:inputType="textPersonName"
            tools:text="John Doe"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:focusable="false"
            android:inputType="textEmailAddress"
            tools:text="johndoe@example.com" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Age Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="nickname"
            android:focusable="false"
            android:hint="@string/age"
            android:inputType="number"
            tools:text="31" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Weight Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weight_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="nickname"
            android:focusable="false"
            android:hint="@string/weight"
            android:inputType="numberDecimal"
            tools:text="70.5" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Height Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/height_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="nickname"
            android:focusable="false"
            android:hint="@string/height"
            android:inputType="numberDecimal"
            tools:text="176.5" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
